# BarberApp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  java-ci.yml
Api/: compose.yaml  pom.xml
Api/src/main/java/com/barberApp/Api/: ApiApplication.java  Application.java
Api/src/main/java/com/barberApp/Api/controllers/: AuthController.java  BarberController.java  ScheduleController.java  UserController.java
Api/src/main/java/com/barberApp/Api/dtos/: AuthenticationDTO.java  ConfirmScheduleDTO.java  CreateScheduleDTO.java  EmailDTO.java  ForgotPasswordDTO.java  GetBarber.java  GetBarbersDTO.java  GetUsersDTO.java  RegisterDTO.java  ResetPasswordDTO.java  ResponseDTO.java  ScheduleDTO.java  UpdateDTO.java
Api/src/main/java/com/barberApp/Api/enums/: ScheduleStatus.java  Status.java  User_Role.java
Api/src/main/java/com/barberApp/Api/models/: Barber.java  Schedule.java  User.java
Api/src/main/java/com/barberApp/Api/producers/: UserProducer.java
Api/src/main/java/com/barberApp/Api/repositories/: BarberRepository.java  (+2 more)
Api/src/test/java/com/barberApp/Api/: ApiApplicationTests.java
barberApp/: env.example  pom.xml
barberApp/src/main/java/com/example/barberApp/: BarberAppApplication.java
barberApp/src/main/resources/: application.yml
barberApp/src/test/java/com/example/barberApp/: BarberAppApplicationTests.java
src/app/: cli.py  tasks.py
src/barberapp_tasks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_tasks.py
(+23 files in other folders)
