[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barberapp-tasks"
version = "0.1.0"
description = "Exemplo: tarefas + CLI com estrutura src"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bruno Gonçalves Modesto" }]
dependencies = []

[project.scripts]
barberapp = "app.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]

[tool.setuptools.packages.find]
where = ["src"]